Dot output from normal node does work differently in material and rendered viewport shading mode #40795

Closed
opened 2014-06-24 23:14:44 +02:00 by Georg Piorczynski · 8 comments

System Information
Windows 8.1 with Geforxe GTX 560

Blender Version
Broken: 2.71 RC2

Short description of error
As seen in attached blend file the normal direction seems to be flipped between cycles rendering and material shading mode when using the dot product output from the normal node. Normal output seems to work just fie.

Exact steps for others to reproduce the error
Load the attached blend file and just switch viewport shading from "Rendered" to "Material". The red and blue color in the example will be flipped in each mode.

normal.blend

**System Information** Windows 8.1 with Geforxe GTX 560 **Blender Version** Broken: 2.71 RC2 **Short description of error** As seen in attached blend file the normal direction seems to be flipped between cycles rendering and material shading mode when using the dot product output from the normal node. Normal output seems to work just fie. **Exact steps for others to reproduce the error** Load the attached blend file and just switch viewport shading from "Rendered" to "Material". The red and blue color in the example will be flipped in each mode. [normal.blend](https://archive.blender.org/developer/F95482/normal.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GeorgPiorczynski

Added subscriber: @GeorgPiorczynski

Using a Vector Math node with dot product works as expected

Using a Vector Math node with dot product works as expected

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Sergey Sharybin self-assigned this 2014-06-27 21:50:43 +02:00

This is famous normals points inside vs. outside issue. For the compatibility seems we'll need to add some tricks to GLSL shader to make it assume normals points outside for new shading system.

This is famous normals points inside vs. outside issue. For the compatibility seems we'll need to add some tricks to GLSL shader to make it assume normals points outside for new shading system.

This issue was referenced by 7dbedf6d4a

This issue was referenced by 7dbedf6d4ac719d5e452091d82d902cf99c47471

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7dbedf6d4a.

Closed by commit 7dbedf6d4a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40795
No description provided.