Fix T40795: Dot output is inverted in viewport with Cycles